<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_menu">Menu</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="pseudonyme">Pseudonyme</string>
    <string name="entrer">Entrer</string>
    <string name="sorts">Sorts</string>
    <string name="attaquer">Attaquer</string>
    <string name="objets">Objets</string>
    <string name="fuir">Fuir</string>
</resources>